prevent horizontal scroll

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@
   background-repeat: no-repeat;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .hamburgerIcon {
